@@ -682,20 +682,6 @@ name|google
 operator|.
 name|common
 operator|.
-name|base
-operator|.
-name|Function
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|google
-operator|.
-name|common
-operator|.
 name|collect
 operator|.
 name|Lists
@@ -2746,14 +2732,18 @@ argument_list|)
 argument_list|,
 name|snippet
 argument_list|,
-operator|(
-name|String
-operator|)
+name|ObjectUtils
+operator|.
+name|toString
+argument_list|(
 name|sdoc
 operator|.
 name|getFieldValue
 argument_list|(
 name|urlField
+argument_list|)
+argument_list|,
+literal|""
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -3183,13 +3173,15 @@ name|result
 operator|.
 name|append
 argument_list|(
-operator|(
-name|String
-operator|)
+name|ObjectUtils
+operator|.
+name|toString
+argument_list|(
 name|ite
 operator|.
 name|next
 argument_list|()
+argument_list|)
 argument_list|)
 operator|.
 name|append
